# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./foundation";
 export * from "./understanding";
 export * from "./connectors";
 export * from "./costs";
+export * from "./brain-versions";
